--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@adonisjs/core": "^5.7.5",
     "@adonisjs/lucid": "^17.2.0",
+    "@adonisjs/mail": "^8.0.1",
     "@adonisjs/repl": "^3.1.10",
     "luxon": "^2.3.1",
     "pg": "^8.7.3",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
